write csv result

--- a/Source/Demo.ipynb
+++ b/Source/Demo.ipynb
@@ -100,7 +100,7 @@
         "                # Đọc và chuyển ảnh sang ảnh xám .\n",
         "                img = cv2.imread(file_path)\n",
         "                if img is None:\n",
-        "                    print('Lỗi '+file_path)\n",
+        "                    print('Error: '+ file_path)\n",
         "                    continue\n",
         "                else:\n",
         "                    img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
@@ -155,7 +155,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Load pretrained model from file successfully ~\n"
+            "Train face recognition model...\n",
+            "Train face emotion recognition model...\n",
+            "Save model successfully~\n"
           ]
         }
       ],
@@ -169,7 +171,8 @@
         "except:\n",
         "    # Huấn luyện mô hình SVM để nhận dạng khuôn mặt\n",
         "    print('Train face recognition model...')\n",
-        "    # model_fr = train_model(\"../Data/train/fr\")\n",
+        "    model_fr = train_model(\"../Data/train/fr\")\n",
+        "    \n",
         "    # Huấn luyện mô hình SVM để nhận dạng cảm xúc\n",
         "    print('Train face emotion recognition model...')\n",
         "    model_fer = train_model(\"../Data/train/fer\")\n",
@@ -180,9 +183,9 @@
         "        path = '../trained_model/'\n",
         "        if not os.path.exists(path):\n",
         "            os.makedirs(path)\n",
-        "        # dump(model_fr, path + 'fr_model.joblib')\n",
+        "        dump(model_fr, path + 'fr_model.joblib')\n",
         "        dump(model_fer, path + 'fer_model.joblib')\n",
-        "        print('Save model successfully~')\n",
+        "        print('Save the models successfully~')\n",
         "    except:\n",
         "        print('Fail to save the models!')"
       ]
@@ -261,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -295,15 +298,41 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "import csv\n",
+        "fieldnames = ['FRAME', 'ANGRY', 'FEAR', 'SAD',\\\n",
+        "            'NEUTRAL', 'HAPPY', 'SURPRISED']\n",
+        "\n",
+        "def declare_csv():\n",
+        "    with open('../Data/data.csv', 'w', newline='') as csvfile:\n",
+        "        writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
+        "        writer.writeheader()\n",
+        "\n",
+        "def write_csv(dict_row):\n",
+        "    with open('../Data/data.csv', 'a', newline='') as csvfile:\n",
+        "        writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
+        "        writer.writerow(dict_row)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "\"\"\"Xử lý phát hiện, nhận dạng trên mỗi frame hình\n",
         "Input: frame hình cần xử lý\n",
         "Output: frame hình kết quả\n",
         "\"\"\"\n",
-        "def process_frame(frame):\n",
-        "    #Đọc và chuyển ảnh sang ảnh xám \n",
+        "def process_frame(frame, no_frame):\n",
+        "    # Đọc và chuyển ảnh sang ảnh xám \n",
         "    img = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
         "    # Phát hiện khuôn mặt\n",
         "    bboxes = face_cascade.detectMultiScale(image=img, scaleFactor=1.3, minNeighbors=5)\n",
+        "    \n",
+        "    # Khởi tạo ghi file csv\n",
+        "    fr_label = {'JAMES': 'a', 'JISOO': 'b', 'JENNIE': 'c', 'ROSE': 'd', 'LISA': 'e'}\n",
+        "    dict_row = {'FRAME': str(no_frame), 'ANGRY': '', 'FEAR': '',\\\n",
+        "                    'SAD': '', 'NEUTRAL': '', 'HAPPY': '', 'SURPRISED': ''}\n",
         "    \n",
         "    # Nhận diện khuôn mặt và cảm xúc\n",
         "    # Duyệt qua từng bounding box khuôn mặt được phát hiện\n",
@@ -324,12 +353,22 @@
         "        cv2.rectangle(frame, (x, y), (x + w, y + h), (0, 255, 0), 2)\n",
         "        cv2.putText(frame, fr_predicted_label, (x, y - 10), cv2.FONT_HERSHEY_SIMPLEX, 1.0, (255, 0, 0), 2)\n",
         "        cv2.putText(frame, fer_predicted_label, (x, y + h + 15), cv2.FONT_HERSHEY_SIMPLEX, 1.0, (0, 0, 255), 2)\n",
+        "        \n",
+        "        # Lưu kết quả vào dictionary\n",
+        "        dict_row['FRAME']=no_frame\n",
+        "        dict_row[fer_predicted_label]+= str(fr_label[fr_predicted_label])\n",
+        "        \n",
+        "    # Ghi file csv\n",
+        "    if len(bboxes) != 0:\n",
+        "        write_csv(dict_row)\n",
+        "    \n",
+        "    # Trả về frame kết quả \n",
         "    return frame"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -339,9 +378,13 @@
         "video_file = '../Data/video1.mp4'\n",
         "video = cv2.VideoCapture(video_file)\n",
         "\n",
+        "no_frame = 0\n",
+        "declare_csv()\n",
+        "\n",
         "while video.isOpened():\n",
+        "    no_frame += 1\n",
         "    ret, frame = video.read()\n",
-        "    processed_frame = process_frame(frame)\n",
+        "    processed_frame = process_frame(frame, str(no_frame))\n",
         "    cv2.imshow('Video', processed_frame)\n",
         "    cv2.setWindowProperty(\"Video\", cv2.WND_PROP_AUTOSIZE, cv2.WINDOW_AUTOSIZE)\n",
         "\n",
@@ -356,47 +399,88 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "     FRAME ANGRY  FEAR  SAD NEUTRAL HAPPY SURPRISED\n",
+            "0       35   NaN   NaN  bce     NaN   NaN         d\n",
+            "1       36     e   NaN   bc     NaN   NaN       NaN\n",
+            "2       37     e   NaN   bc     NaN   NaN       NaN\n",
+            "3       38     e   NaN    c     NaN     b         d\n",
+            "4       39   NaN   NaN  NaN     NaN     b        ec\n",
+            "..     ...   ...   ...  ...     ...   ...       ...\n",
+            "349    384   NaN   NaN   ce     NaN   NaN       NaN\n",
+            "350    385   NaN   NaN   ce     NaN   NaN       NaN\n",
+            "351    386   NaN   NaN    c     NaN     e       NaN\n",
+            "352    387   NaN   NaN    c     NaN     e       NaN\n",
+            "353    388   NaN   NaN    c     NaN     e       NaN\n",
+            "\n",
+            "[354 rows x 7 columns]\n"
+          ]
+        }
+      ],
       "source": [
-        "# Lưu giữ đường cong cảm xúc (từng ID gương mặt theo thời gian)\n",
-        "# Điểm danh (đếm số lượng ID khác nhau theo thời gian)\n"
+        "import pandas\n",
+        "df = pandas.read_csv('../Data/data.csv')\n",
+        "print(df)   "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# import matplotlib.pyplot as plt\n",
-        "\n",
-        "# # Lưu kết quả\n",
-        "# def save_emotion_results(emotion_predictions, output_file):\n",
-        "#     with open(output_file, 'w') as file:\n",
-        "#         for prediction in emotion_predictions:\n",
-        "#             time, emotion = prediction\n",
-        "#             file.write(f\"{time}\\t{emotion}\\n\")\n",
-        "#     print(\"Kết quả đã được lưu thành công.\")\n",
-        "\n",
-        "# # Xây dựng đường cong cảm xúc\n",
-        "# def plot_emotion_curve(emotion_predictions):\n",
-        "#     times = [prediction[0] for prediction in emotion_predictions]\n",
-        "#     emotions = [prediction[1] for prediction in emotion_predictions]\n",
+        "# Vẽ đồ thị \n",
+        "def get_data_visualize(df, fr_label):\n",
+        "    \"\"\"\n",
+        "    Hàm rút trích đường cong cảm xúc của một người từ dataframe \n",
+        "    Input:\n",
+        "        df: dataframe\n",
+        "        fr_label: nhãn của người muốn rút trích cảm xúc\n",
+        "    Output:\n",
+        "        visualize_data: dữ liệu lưu giữ đường cong cảm xúc\n",
+        "    \"\"\"\n",
         "    \n",
-        "#     plt.plot(times, emotions)\n",
-        "#     plt.xlabel(\"Thời gian\")\n",
-        "#     plt.ylabel(\"Cảm xúc\")\n",
-        "#     plt.title(\"Đường cong cảm xúc theo thời gian\")\n",
-        "#     plt.show()\n",
+        "    emotions = ['ANGRY', 'FEAR', 'SAD', 'NEUTRAL', 'HAPPY', 'SURPRISED']\n",
+        "    fr_dict = {'JAMES': 'a', 'JISOO': 'b', 'JENNIE': 'c', 'ROSE': 'd', 'LISA': 'e'}\n",
+        "    fr_char = fr_dict[fr_label]\n",
+        "    visualize_data = {'fr_label': fr_label}\n",
+        "    \n",
+        "    for index, row in df.iterrows:\n",
+        "         for emotion in emotions:\n",
+        "             if fr_char in df[emotion]:\n",
+        "                 visualize_df = {}\n",
+        "                 visualize_df['frame']=row['FRAME']\n",
+        "                 visualize_df['fer_label']=emotion\n",
+        "                 break\n",
+        "             \n",
+        "    # trả về kết quả\n",
+        "    visualize_data['curve': visualize_df]            \n",
+        "    return visualize_data\n",
         "\n",
-        "# # Gọi các hàm\n",
-        "# emotion_predictions = [(0.1, 'happy'), (0.5, 'sad'), (1.2, 'angry'), ...]  # Thay bằng danh sách kết quả thực tế\n",
-        "# output_file = \"emotion_results.txt\"  # Thay bằng tên tập tin mà bạn muốn lưu kết quả\n",
+        "def get_all_curves():\n",
+        "    curves = []\n",
+        "    for member in ['JAMES', 'JISOO', 'JENNIE', 'ROSE', 'LISA']:\n",
+        "        curves.append(get_data_visualize(df, member))\n",
+        "    return curves\n",
         "\n",
-        "# save_emotion_results(emotion_predictions, output_file)\n",
-        "# plot_emotion_curve(emotion_predictions)\n"
+        "def plot_line_chart(frame, fer_labels, fr_label):\n",
+        "    plt.plot(frame, fer_labels, label=fr_label, color='red', marker='o')\n",
+        "    plt.xlabel('frame')\n",
+        "    plt.title('Đường cong cảm xúc theo thời gian')\n",
+        "    plt.legend()\n",
+        "    plt.grid(True)\n",
+        "    plt.show()\n",
+        "    \n",
+        "def show_all_curves(curves):\n",
+        "    for curve in curves:\n",
+        "        for index, row in curve.iterrows:\n",
+        "            plot_line_chart(row[frame], )"
       ]
     }
   ],
